Finished (?), missing StyleCop

--- a/Pointer/Pointer.csproj
+++ b/Pointer/Pointer.csproj
@@ -9,17 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="generic.ico" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="generic.ico">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
+    <None Update="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="generic.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
