--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = lib/SDL_ttf
 	url = https://github.com/libsdl-org/SDL_ttf.git
 	branch = SDL2
+[submodule "lib/lua"]
+	path = lib/lua
+	url = https://github.com/walterschell/Lua.git
